--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,6 +17,12 @@
 .div_filtro{
 	padding:10px 0px 0px 40px;
 }
+.retorno{
+	font-family:Arial, Helvetica, sans-serif;
+	font-weight:bolder;
+	font-size:12px;
+	color:#FF0000;
+}
 /**********************
   FIM PARTE ANDERSON 
 ***********************/
